# StoryWeaver

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  alembic.ini  pyproject.toml
.claude/: settings.local.json
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
apps/web/: _compat.py  app.py  main.py  pyproject.toml
apps/web/components/: banner.py  image_display.py
apps/web/pages/: auth.py  landing.py  registration.py
apps/web/pages/admin/: campaigns.py
apps/web/pages/gm/: campaigns.py  characters.py  history.py  knowledge_qa.py  npcs.py  players.py  rag_eval.py  session_plan.py  world_notes.py
apps/web/pages/player/: character.py  history.py  join.py  knowledge_qa.py  twin_chat.py
apps/web/services/: auth.py  db.py  eval.py  knowledge.py  response_eval.py
apps/web/tests/: test_admin_campaigns.py  test_auth_service.py  test_player_join.py  test_upsert.py
deploy/compose/: docker-compose.cloud.yml  docker-compose.local.yml
deploy/docker/: Dockerfile.ollama  Dockerfile.web
docs/adr/: ADR-005-agent-framework.md  ADR-006-fastapi-minimal-router.md  ADR-007-incremental-batch-ingestion-pipeline.md
harness/: runner.py
harness/knowledge_qa/: benchmark_results.jsonl  eval_runner.py  judge_runner.py  rag_gold_standard.jsonl  test_eval_service.py  test_evaluator.py  test_gold_standard.py  test_ingestion.py  test_integration.py  test_retrieval.py
harness/scoring/: rubrics.py
notebooks/: chromadb_explorer.ipynb  docling_spike.ipynb
specs/: BACKLOG.md  TECH_STACK.md
specs/001-project-scope/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-auth-admin-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-demo-readiness-polish/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-auth-admin-reboot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-rag-qa-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+109 files in other folders)
