[project]
name = "storyweaver-web"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gradio>=4.0",
    "storyweaver-core",
    "storyweaver-agents",
    "storyweaver-llm",
    "storyweaver-imagegen",
    "storyweaver-storage",
    "storyweaver-story",
    "storyweaver-rules-earthdawn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pages", "components"]

[tool.uv.sources]
storyweaver-core = { workspace = true }
storyweaver-agents = { workspace = true }
storyweaver-llm = { workspace = true }
storyweaver-imagegen = { workspace = true }
storyweaver-storage = { workspace = true }
storyweaver-story = { workspace = true }
storyweaver-rules-earthdawn = { workspace = true }